# octobot

./: .gitignore  LICENSE  README.md  install.sh  octobot.service  pyproject.toml  setup_wizard.py
config/: CLAUDE.md.example  config.yaml.example
docs/: architecture.md  configuration.md  writing-claude-md.md
src/octobot/: analyzer.py  cli.py  config.py  daemon.py  scheduler.py  state.py  status.py  wizard.py  youtrack.py
